--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <nav class="navbar">
       <a href="#" class="logo"> 
-        Slurp</span></a>
+        Slur</span></a>
       <div class="navbar-nav">
         <a href="#home">Beranda</a>
         <a href="#about">Tentang Kami</a>
