--- a/index.html
+++ b/index.html
@@ -1,28 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SLURP</title>
-      <link
+    <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"/>
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"/>
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
+  </head>
+  <body>
     <nav class="navbar">
-      <a href="#" class="logo"> 
-        Slurp</span></a>
+      <a href="#" class="logo">
+        <h1>SLURP</h1>
+      </a>
       <div class="navbar-nav">
-        <a href="#home">Beranda</a>
-        <a href="#about">Tentang Kami</a>
-        <a href="#menus">Menu</a>
-        <a href="#contact">Kontak</a>
+        <ul>
+          <li><a href="#home">Beranda</a></li>
+          <li><a href="#menus">Menu</a></li>
+          <li><a href="#about">Tentang Kami</a></li>
+          <li><a href="#contact">Kontak</a></li>
+        </ul>
       </div>
       <div class="navbar-extra">
         <a href="#" id="search" f
@@ -34,6 +47,167 @@
         <a href="#" id="menu" f><i class="fa-solid fa-bars" id="bars"></i></a>
       </div>
     </nav>
-    
-</body>
+    <section class="home" id="home">
+      <main class="content">
+        <h1 style="color: #ffffff">
+          <b>Slurp the brew </b>
+          <br />chase the blue <br />we will try, to fix you!
+        </h1>
+        <img src="media/hero1.png" alt="" class="hero1" />
+        <img src="media/ambarika.png" alt="" class="hero2" />
+        <p>
+          Redup kedua mata-mu entah mengantuk entah lah mengapa,
+          <br />hari ini kamu berhak bahagia, bersama kopi tua <br />
+          menepi bersama menjauh dari segala problema, <br />
+          Sempurna Adanya
+        </p>
+        <div class="cta">
+          <a href="#menus" class="btn">Lihat Menu</a>
+        </div>
+      </main>
+    </section>
+    <img src="media/beans.png" alt="Coffee Background" class="beans" />
+
+    <section class="menu-wrapper" id="menus">
+      <h1 class="menu-title" data-aos="fade-up">Our Menu</h1>
+      <div class="menu-section">
+        <div class="menu-card" data-aos="fade-up-right">
+          <img src="media/cappuccino.png" alt="Cappuccino" />
+          <h3>Cappuccino</h3>
+          <p>30% espresso, 40% milk foam & 40% steamed milk.</p>
+          <div class="menu-bottom">
+            <span>Rp. 46.000</span>
+            <button>+</button>
+          </div>
+        </div>
+
+        <div class="menu-card" data-aos="fade-up">
+          <img src="media/ambarika.png" alt="Latte" />
+          <h3>Ambarika</h3>
+          <p>30% espresso & 70% Sussy white liquid.</p>
+          <div class="menu-bottom">
+            <span>Rp. 57.000</span>
+            <button>+</button>
+          </div>
+        </div>
+
+        <div class="menu-card" data-aos="fade-up-left">
+          <img src="media/americano.png" alt="Mocha" />
+          <h3>Americano</h3>
+          <p>60% espresso, 40% water</p>
+          <div class="menu-bottom">
+            <span>Rp. 35.000.</span>
+            <button>+</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="about-slurp" id="about">
+      <h1 class="about-title" data-aos="fade-down">Why SLURP?</h1>
+
+      <div class="about-content">
+        <div class="about-left">
+          <div class="about-item" data-aos="fade-down-right">
+            <div class="about-number">1</div>
+            <h3>Kualitas Biji Kopi</h3>
+            <p>
+              Kami memilih biji terbaik untuk memberikan rasa yang kaya dan
+              konsisten.
+            </p>
+          </div>
+          <div class="about-item" data-aos="fade-up-right">
+            <div class="about-number">2</div>
+            <h3>Suasana Nyaman</h3>
+            <p>
+              Tempat sempurna untuk bersantai, bekerja, atau mengobrol dengan
+              teman.
+            </p>
+          </div>
+        </div>
+
+        <div class="about-center" data-aos="fade-up">
+          <img src="media/cup.png" alt="Slurp Cup" />
+          <button class="about-button">Pesan Sekarang</button>
+        </div>
+
+        <div class="about-right">
+          <div class="about-item" data-aos="fade-down-left">
+            <div class="about-number">3</div>
+            <h3>Rasa yang Disesuaikan</h3>
+            <p>
+              Kopi disajikan sesuai preferensi pelanggan — hangat dan personal.
+            </p>
+          </div>
+          <div class="about-item" data-aos="fade-up-left">
+            <div class="about-number">4</div>
+            <h3>Barista Profesional</h3>
+            <p>
+              Dibuat oleh barista berpengalaman dengan teknik terbaik untuk
+              setiap gelasnya.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <img
+      src="media/beans.png"
+      alt="Coffee Background"
+      class="beans1"
+      data-aos="fade-left"
+    />
+    <section class="contact-section" id="contact">
+      <h2 class="contact-title" data-aos="fade-down">Hubungi Kami</h2>
+      <div class="contact-container">
+        <div class="contact-form" data-aos="fade-right">
+          <h3>Contact Us</h3>
+          <form>
+            <div class="form-group">
+              <input type="text" placeholder="Full Name" required />
+              <input type="email" placeholder="Email Address" required />
+            </div>
+            <input type="text" placeholder="Subject" required />
+            <textarea placeholder="Message" rows="5" required></textarea>
+            <button type="submit">Kirim Pesan</button>
+          </form>
+        </div>
+
+        <div class="contact-map">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3359.732143142564!2d136.53533267584703!3d34.844673472868855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60038a958a96b7cd%3A0x86c145fa360123dc!2sSirkuit%20Suzuka!5e1!3m2!1sid!2sid!4v1754220398701!5m2!1sid!2sid"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+            data-aos="fade-left"
+          ></iframe>
+        </div>
+      </div>
+
+      <div class="contact-info">
+        <div>
+          <i class="fa-solid fa-location-dot"></i>
+          <p>Jl. Jl bersamamu kapan?</p>
+        </div>
+        <div>
+          <i class="fa-solid fa-phone"></i>
+          <p>+62 5757-5757-3935</p>
+        </div>
+        <div>
+          <i class="fa-solid fa-envelope"></i>
+          <p>slurpcosho@gmail.com</p>
+        </div>
+        <div>
+          <i class="fa-solid fa-globe"></i>
+          <p>www.slurpcoffee.com</p>
+        </div>
+      </div>
+    </section>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+  </body>
 </html>
